# unqlite-python

./: .gitignore  .travis.yml  MANIFEST  MANIFEST.in  README.md  pyproject.toml  setup.py  tests.py  tox.ini  unqlite.c  unqlite.pyi  unqlite.pyx
.github/workflows/: build_publish.yml  tests.yaml  wheels.yaml
ctypesgen/: ctypesgen.py
ctypesgen/ctypesgencore/: expressions.py  libraryloader.py
ctypesgen/ctypesgencore/parser/: ctypesparser.py  datacollectingparser.py
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst
src/: unqlite.c
unqlite/: __init__.py  _unqlite.pyx  core.py  tests.py  unqlite.pyx
unqlite/src/: unqlite.c
